--- a/public/home.html
+++ b/public/home.html
@@ -15,8 +15,8 @@
     <nav class="navbar">
         <img src="img/logo.png" class="logo" alt="">
         <ul class="links-container">
-            <li class="link-item"><a href="public/home" class="link">home</a></li>
-            <li class="link-item"><a href="public/editor" class="link">editor</a></li>
+            <li class="link-item"><a href="home" class="link">home</a></li>
+            <li class="link-item"><a href="editor.html" class="link">editor</a></li>
         </ul>
     </nav>
 
